# RegSim-IN

./: .gitignore  MANIFEST.in  README.md  USER_MANUAL.md  pyproject.toml
.github/workflows/: regsim.yml
examples/: gst_input.json  gst_rules.json  input.json  messy_input.json  payout_service.py  rbi_input.json  rules.json
regsim/: cli.py  engine.py  parser.py
regsim/commands/: simulate.py
regsim/core/: __init__.py  evaluator.py  fields.py  simulation.py  validators.py
regsim/schemas/: output.schema.json  rule.schema.json
regsim/utils/: __init__.py  extract_call_args.py  extract_dic.py  get_func_name.py
rules/rbi/: pa_fund_flow.json
rules/tds/: 194C_threshold.json
tests/: test_simulation.py
