[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regsim-in"
version = "0.1.0"
description = "Regulatory Simulation CLI for Indian Backend Systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.0.0"
]

[project.scripts]
regsim-in = "regsim.cli:main"

[tool.setuptools.packages.find]
include = ["regsim*"]
exclude = ["rules*", "tests*", "examples*", ".github*"]

[tool.setuptools]
include-package-data = true
